--- a/index.html
+++ b/index.html
@@ -32,63 +32,134 @@
         </div>
     </nav>
     <header class="jumbotron">
-        <div class="container">
+       <div class="container">
             <div class="row row-header">
-                <div class = "col-12 col-sm-6">
+                <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col col-sm align-self-center" style="text-align: center;">
                     <img src="img/logo.png" class="img-fluid">
+                    <a class="btn btn-warning" href="#reservationForm" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
 
     <div class="container">
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
+       <div class="row row-content align-items-center">
+            <div class="col-sm-4 col-md-3 order-2">   <!-- Replaced flex-first and flex-last with order-1 and order-2 in beta 2" -->
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
-            <div class="col col-sm order-sm-first col-md">
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthapizza">
-                    <div class="media body">
-                        <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-secondary">$4.99</span></h2>
-                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>    
+            <div class="col-sm col-md order-1">
+               <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                         src="img/uthappizza.png" alt="Uthappizza">
+                    <div class="media-body">
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                          Italian pizza, topped with Cerignola olives, ripe vine
+                          cherry tomatoes, Vidalia onion, Guntur chillies and
+                          Buffalo Paneer.</p>
                     </div>
                 </div>
-                
             </div>
         </div>
 
  
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3">
+            <div class="col-sm-4 col-md-3 order-1">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="col-sm col-md order-2">
+            <div class="media">
+                <div class="order-2">
+                <img src="img/buffet.png" class="d-flex mr-3 img-thumbnail align-self-center float-right" alt="Buffet">
+            </div>
+                <div class="media-body order-1">
+                    <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                    <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks.All for just $19.99 per person </p>
+                </div>
+            </div>
             </div>
         </div>
 
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3 order-sm-last">
+         <div class="row row-content align-items-center">
+            <div class="col-sm-4 col-md-3 flex-last order-2">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
-            <div class="col col-sm col-md order-sm-first">
+            <div class="col-sm col-md flex-first order-1">
                 <div class="media">
-                    <img class = "d-flex mr-3 align-self-center img-thumbnail" src="img/alberto.png" alt="alberto">
-                    <div class="media body">
-                      <h2 class="mt-0">Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                         src="img/alberto.png" alt="Alberto Somayya">
+                    <div class="media-body">
+                        <h2 class="mt-0">Alberto Somayya</h2>
+                        <h4>Executive Chef</h4>
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                         International experience having worked closely with
+                         whos-who in the culinary world, he specializes in
+                          creating mouthwatering Indo-Italian fusion experiences.
+                         </p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+
+         <div id="reservationForm" class="row row-content align-items-center" >
+                <div class="col-12 offset-0 col-md-8 offset-md-2">
+                    <div class="card">
+                        <h3 class="card-header bg-warning text-white">Reserve a table</h3>
+                        <div class="card-body">
+                            <form>
+                                <div class="form-group row">
+                                    <label for="firstname" class="col-md-2 col-form-label">Number of Guests</label>
+                                    <div class="col-md-10 align-items-center">
+                                            <label class="radio-inline">
+                                                <input type="radio" name="nbPeople" value="1"> 1  
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="nbPeople" value="2"> 2
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="nbPeople" value="3"> 3
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="nbPeople" value="4"> 4
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="nbPeople" value="5"> 5
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="nbPeople" value="6"> 6
+                                            </label>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="lastname" class="col-md-2 col-form-label">Date and Time</label>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <!-- <span class="input-group-addon"><i class="fa fa-calendar" aria-hidden="true"></i></span> -->
+                                            <input class="form-control" type="date" name="dateBooking" value="" placeholder="Date">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <!-- <span class="input-group-addon"><i class="fa fa-clock-o" aria-hidden="true"></i></span> -->
+                                            <input class="form-control" type="text" name="hourBooking" value="" placeholder="Time">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="offset-md-2 col-md-10">
+                                        <button type="submit" class="btn btn-primary">Reserve</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <footer class="footer">
         <div class="container">
