--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col col-sm align-self-center" style="text-align: center;">
+                <div class="col col-sm-3" style="text-align: center;">
                     <img src="img/logo.png" class="img-fluid">
-                    <a class="btn btn-warning" href="#reservationForm" role="button">Reserve Table</a>
+                </div>
+                <div class = "col col-sm-3 align-self-center">
+                    <a class="btn btn-warning btn-block" href="#reservationForm" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
