--- a/index.html
+++ b/index.html
@@ -37,6 +37,82 @@
         </div>
     </nav>
 
+    <div id="reserveModal" class="modal fade" role = "dialog">
+        <div class="modal-dialog modal-lg" role = "content">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">
+                    Reserve a Table
+                </h4>
+                <button type="button" class="close" data-dismiss = "modal">
+                        &times;
+                    </button>
+            </div>
+            <div class="modal-body">
+                 <form>
+                                <div class="form-group row">
+                                    <label for="firstname" class="col-md-2 col-form-label">Number of Guests</label>
+                                    <div class="col-md-10 align-items-center">
+                                            <label class="radio-inline">
+                                                <input type="radio" name="nbPeople" value="1"> 1  
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="nbPeople" value="2"> 2
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="nbPeople" value="3"> 3
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="nbPeople" value="4"> 4
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="nbPeople" value="5"> 5
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="nbPeople" value="6"> 6
+                                            </label>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-md-2 col-form-label">Section</label>
+                                    <div class="btn-group-toggle col-md-10 align-items-center" data-toggle = "buttons">
+                                        <label class="btn btn-success active">
+                                            <input type="radio" name="options" autocomplete="off" id="Non-Smoking" checked>Non-Smoking
+                                        </label>
+                                        <label class="btn btn-danger">
+                                            <input type="radio" name="options" autocomplete="off" id="Smoking">Smoking
+                                        </label>
+                                        <!-- <button type="button" class="btn-success">Non-Smoking</button>
+                                        <button type="button" class="btn-danger">Smoking</button> -->
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="lastname" class="col-md-2 col-form-label">Date and Time</label>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <!-- <span class="input-group-addon"><i class="fa fa-calendar" aria-hidden="true"></i></span> -->
+                                            <input class="form-control" type="date" name="dateBooking" value="" placeholder="Date">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <!-- <span class="input-group-addon"><i class="fa fa-clock-o" aria-hidden="true"></i></span> -->
+                                            <input class="form-control" type="text" name="hourBooking" value="" placeholder="Time">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="btn-group align-items-center offset-2 col-md-10">
+                                        <button type="button" class="btn btn-secondary btn-md" data-dismiss = "modal">Cancel</button>
+                                        <button type="button" class="btn btn-primary ml-1">Reserve</button>
+                                    </div>
+                                </div>
+                            </form>
+            </div>
+        </div>
+        </div>
+    </div>
+
     <div id="loginModal"  class="modal fade" role = "dialog">
         <div class="modal-dialog modal-lg" role = "content">
             <div class="modal-content">
@@ -89,9 +165,8 @@
                 </div>
                 <div class = "col col-sm-3 align-self-center">
                     <a class="btn btn-warning btn-block"
-                    data-toggle = "tooltip" data-html = "true" title="Or Call us at <br><strong>+887458934
-                    </strong></br>" data-placement = "bottom" 
-                     href="#reservationForm" role="button">Reserve Table</a>
+                    data-toggle = "modal" data-target = "#reserveModal" 
+                     href="" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -203,61 +278,6 @@
                 </div>
             </div>
         </div>
-
-         <div id="reservationForm" class="row row-content align-items-center" >
-                <div class="col-12 offset-0 col-md-8 offset-md-2">
-                    <div class="card">
-                        <h3 class="card-header bg-warning text-white">Reserve a table</h3>
-                        <div class="card-body">
-                            <form>
-                                <div class="form-group row">
-                                    <label for="firstname" class="col-md-2 col-form-label">Number of Guests</label>
-                                    <div class="col-md-10 align-items-center">
-                                            <label class="radio-inline">
-                                                <input type="radio" name="nbPeople" value="1"> 1  
-                                            </label>
-                                            <label class="radio-inline">
-                                                <input type="radio" name="nbPeople" value="2"> 2
-                                            </label>
-                                            <label class="radio-inline">
-                                                <input type="radio" name="nbPeople" value="3"> 3
-                                            </label>
-                                            <label class="radio-inline">
-                                                <input type="radio" name="nbPeople" value="4"> 4
-                                            </label>
-                                            <label class="radio-inline">
-                                                <input type="radio" name="nbPeople" value="5"> 5
-                                            </label>
-                                            <label class="radio-inline">
-                                                <input type="radio" name="nbPeople" value="6"> 6
-                                            </label>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <label for="lastname" class="col-md-2 col-form-label">Date and Time</label>
-                                    <div class="col-md-4">
-                                        <div class="input-group">
-                                            <!-- <span class="input-group-addon"><i class="fa fa-calendar" aria-hidden="true"></i></span> -->
-                                            <input class="form-control" type="date" name="dateBooking" value="" placeholder="Date">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="input-group">
-                                            <!-- <span class="input-group-addon"><i class="fa fa-clock-o" aria-hidden="true"></i></span> -->
-                                            <input class="form-control" type="text" name="hourBooking" value="" placeholder="Time">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="offset-md-2 col-md-10">
-                                        <button type="submit" class="btn btn-primary">Reserve</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
 
     <footer class="footer">
@@ -304,11 +324,11 @@
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         $(document).ready(function(){
             $('[data-toggle = "tooltip"]').tooltip();
         });
-    </script>
+    </script> -->
 
 </body>
 
