--- a/index.html
+++ b/index.html
@@ -318,39 +318,16 @@
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
     <!-- <script src="js/scripts.js"></script> -->
     <!-- <script type="text/javascript">
         $(document).ready(function(){
             $('[data-toggle = "tooltip"]').tooltip();
         });
     </script> -->
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $('#mycarousel').carousel({interval: 2000});
-            $('#carouselButton').click(function(){
-                if($('#carouselButton').children('span').hasClass('fa-pause')){
-                    $('#mycarousel').carousel('pause');
-                    $('#carouselButton').children('span').removeClass('fa-pause');
-                    $('#carouselButton').children('span').addClass('fa-play');
-                }
-                else{
-                    $('#mycarousel').carousel('cycle');
-                    $('#carouselButton').children('span').removeClass('fa-play');
-                    $('#carouselButton').children('span').addClass('fa-pause');   
-                }
-            });
-
-             $("#loginButton").click(function(){
-                // alert("hello")
-                $("#loginModal").modal('show');
-            });
-
-              $("#reserveButton").click(function(){
-                // alert("hello")
-                $("#reserveModal").modal('show');
-            });
-        });
-    </script>
+    <!-- <script type="text/javascript">
+    
+    </script> -->
 </body>
 
 </html>
